Added "speed burst" mode and button indicator that can be toggled by hotkey

--- a/GUI/UI/VideoPlayer/MainVideoPlayerWindow.ui
+++ b/GUI/UI/VideoPlayer/MainVideoPlayerWindow.ui
@@ -150,36 +150,39 @@
             <number>0</number>
            </property>
            <layout class="QGridLayout" name="gridLayout_2">
-            <item row="1" column="15">
-             <widget class="QToolButton" name="btnRight">
+            <item row="1" column="2">
+             <widget class="QPushButton" name="button_slow_down">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="toolTip">
-               <string>Step Frames Right</string>
+               <string>Slow down the video</string>
               </property>
               <property name="text">
-               <string>&gt;</string>
-              </property>
-              <property name="shortcut">
-               <string>Right</string>
-              </property>
-              <property name="arrowType">
-               <enum>Qt::RightArrow</enum>
+               <string>Slow Down</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="9">
-             <spacer name="horizontalSpacer_7">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
+            <item row="1" column="5">
+             <widget class="QPushButton" name="button_speed_up">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
               </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
+              <property name="toolTip">
+               <string>Speed up the video</string>
               </property>
-             </spacer>
+              <property name="text">
+               <string>Speed Up</string>
+              </property>
+             </widget>
             </item>
-            <item row="1" column="10">
+            <item row="1" column="11">
              <widget class="QPushButton" name="button_full_screen">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -208,29 +211,6 @@
               </property>
              </widget>
             </item>
-            <item row="1" column="8">
-             <widget class="QPushButton" name="button_mark_end">
-              <property name="toolTip">
-               <string>Mark the end of the entry</string>
-              </property>
-              <property name="text">
-               <string>Mark End</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="6">
-             <spacer name="horizontalSpacer_6">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
             <item row="1" column="0">
              <widget class="ToggleButton" name="button_play_pause">
               <property name="sizePolicy">
@@ -250,17 +230,102 @@
               </property>
              </widget>
             </item>
-            <item row="1" column="7">
-             <widget class="QPushButton" name="button_mark_start">
-              <property name="toolTip">
-               <string>Mark the start of the entry</string>
+            <item row="1" column="15">
+             <widget class="QSpinBox" name="spinBoxFrameJumpMultiplier">
+              <property name="minimum">
+               <number>1</number>
               </property>
-              <property name="text">
-               <string>Mark Start</string>
+              <property name="maximum">
+               <number>1000</number>
               </property>
              </widget>
             </item>
-            <item row="0" column="0" colspan="19">
+            <item row="1" column="12">
+             <spacer name="horizontalSpacer">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="1" column="9">
+             <widget class="QPushButton" name="button_mark_end">
+              <property name="toolTip">
+               <string>Mark the end of the entry</string>
+              </property>
+              <property name="text">
+               <string>Mark End</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="19">
+             <widget class="QPushButton" name="btnHelp">
+              <property name="text">
+               <string>Help</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="16">
+             <widget class="QToolButton" name="btnRight">
+              <property name="toolTip">
+               <string>Step Frames Right</string>
+              </property>
+              <property name="text">
+               <string>&gt;</string>
+              </property>
+              <property name="shortcut">
+               <string>Right</string>
+              </property>
+              <property name="arrowType">
+               <enum>Qt::RightArrow</enum>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="18">
+             <spacer name="horizontalSpacer_3">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="1" column="1">
+             <spacer name="horizontalSpacer_5">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="1" column="13">
+             <widget class="QToolButton" name="btnSkipLeft">
+              <property name="toolTip">
+               <string>Skip Frames Left</string>
+              </property>
+              <property name="text">
+               <string>&lt;-</string>
+              </property>
+              <property name="shortcut">
+               <string>Ctrl+Left</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="0" colspan="20">
              <widget class="HighlightedJumpSlider" name="slider_progress">
               <property name="maximum">
                <number>9999</number>
@@ -276,8 +341,8 @@
               </property>
              </widget>
             </item>
-            <item row="1" column="11">
-             <spacer name="horizontalSpacer">
+            <item row="1" column="10">
+             <spacer name="horizontalSpacer_7">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
               </property>
@@ -290,29 +355,6 @@
              </spacer>
             </item>
             <item row="1" column="14">
-             <widget class="QSpinBox" name="spinBoxFrameJumpMultiplier">
-              <property name="minimum">
-               <number>1</number>
-              </property>
-              <property name="maximum">
-               <number>1000</number>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="17">
-             <spacer name="horizontalSpacer_3">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-            <item row="1" column="13">
              <widget class="QToolButton" name="btnLeft">
               <property name="toolTip">
                <string>Step Frames Left</string>
@@ -328,21 +370,8 @@
               </property>
              </widget>
             </item>
-            <item row="1" column="12">
-             <widget class="QToolButton" name="btnSkipLeft">
-              <property name="toolTip">
-               <string>Skip Frames Left</string>
-              </property>
-              <property name="text">
-               <string>&lt;-</string>
-              </property>
-              <property name="shortcut">
-               <string>Ctrl+Left</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="1">
-             <spacer name="horizontalSpacer_5">
+            <item row="1" column="7">
+             <spacer name="horizontalSpacer_6">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
               </property>
@@ -354,7 +383,17 @@
               </property>
              </spacer>
             </item>
-            <item row="1" column="16">
+            <item row="1" column="8">
+             <widget class="QPushButton" name="button_mark_start">
+              <property name="toolTip">
+               <string>Mark the start of the entry</string>
+              </property>
+              <property name="text">
+               <string>Mark Start</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="17">
              <widget class="QToolButton" name="btnSkipRight">
               <property name="toolTip">
                <string>Skip Frames Right</string>
@@ -367,42 +406,25 @@
               </property>
              </widget>
             </item>
-            <item row="1" column="18">
-             <widget class="QPushButton" name="btnHelp">
-              <property name="text">
-               <string>Help</string>
-              </property>
-             </widget>
-            </item>
             <item row="1" column="4">
-             <widget class="QPushButton" name="button_speed_up">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
+             <widget class="QToolButton" name="toolButton_SpeedBurstEnabled">
+              <property name="enabled">
+               <bool>false</bool>
               </property>
-              <property name="toolTip">
-               <string>Speed up the video</string>
+              <property name="statusTip">
+               <string>Trigger speedburst with the hotkey</string>
               </property>
-              <property name="text">
-               <string>Speed Up</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="2">
-             <widget class="QPushButton" name="button_slow_down">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="toolTip">
-               <string>Slow down the video</string>
+              <property name="whatsThis">
+               <string>Trigger speedburst with the hotkey</string>
               </property>
               <property name="text">
-               <string>Slow Down</string>
+               <string>SpeedBurst</string>
+              </property>
+              <property name="checkable">
+               <bool>true</bool>
+              </property>
+              <property name="checked">
+               <bool>true</bool>
               </property>
              </widget>
             </item>
