--- a/GUI/MainWindow/MainWindow.ui
+++ b/GUI/MainWindow/MainWindow.ui
@@ -41,7 +41,7 @@
      <x>0</x>
      <y>0</y>
      <width>847</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -96,10 +96,48 @@
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <layout class="QGridLayout" name="gridLayout">
+       <item row="0" column="2">
+        <widget class="QToolButton" name="toolButton_ZoomOut">
+         <property name="toolTip">
+          <string>Zoom Out</string>
+         </property>
+         <property name="text">
+          <string>-</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="5">
+        <widget class="QLabel" name="lblActiveViewportDuration">
+         <property name="text">
+          <string>--</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="4">
+        <widget class="QLabel" name="label_2">
+         <property name="text">
+          <string>Viewport Duration:</string>
+         </property>
+        </widget>
+       </item>
        <item row="0" column="0">
         <widget class="QLabel" name="label">
          <property name="text">
           <string>Zoom:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="5">
+        <widget class="QLabel" name="lblActiveTotalTimelineDuration">
+         <property name="text">
+          <string>--</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="4">
+        <widget class="QLabel" name="label_3">
+         <property name="text">
+          <string>Total Timeline Duration:</string>
          </property>
         </widget>
        </item>
@@ -126,31 +164,95 @@
         </widget>
        </item>
        <item row="0" column="3">
-        <widget class="QLabel" name="lblActiveViewportDuration">
+        <widget class="QToolButton" name="toolButton_ZoomIn">
+         <property name="toolTip">
+          <string>Zoom In</string>
+         </property>
          <property name="text">
-          <string>--</string>
+          <string>+</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="2">
-        <widget class="QLabel" name="label_2">
-         <property name="text">
-          <string>Viewport Duration:</string>
+       <item row="1" column="1">
+        <widget class="QFrame" name="frame">
+         <property name="frameShape">
+          <enum>QFrame::StyledPanel</enum>
          </property>
-        </widget>
-       </item>
-       <item row="1" column="2">
-        <widget class="QLabel" name="label_3">
-         <property name="text">
-          <string>Total Timeline Duration:</string>
+         <property name="frameShadow">
+          <enum>QFrame::Raised</enum>
          </property>
-        </widget>
-       </item>
-       <item row="1" column="3">
-        <widget class="QLabel" name="lblActiveTotalTimelineDuration">
-         <property name="text">
-          <string>--</string>
-         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <property name="spacing">
+           <number>6</number>
+          </property>
+          <property name="leftMargin">
+           <number>0</number>
+          </property>
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <property name="rightMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
+          <item>
+           <widget class="QToolButton" name="toolButton_ScrollToStart">
+            <property name="toolTip">
+             <string>Scroll to Start of Timeline</string>
+            </property>
+            <property name="statusTip">
+             <string>Scroll to Start of Timeline</string>
+            </property>
+            <property name="text">
+             <string>||&lt;</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QToolButton" name="toolButton_ScrollToPrevious">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="toolTip">
+             <string>Scroll to Previous Video</string>
+            </property>
+            <property name="statusTip">
+             <string>Scroll to Previous Video</string>
+            </property>
+            <property name="text">
+             <string>|&lt;</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QToolButton" name="toolButton_ScrollToNext">
+            <property name="toolTip">
+             <string>Scroll to Next Video</string>
+            </property>
+            <property name="statusTip">
+             <string>Scroll to Next Video</string>
+            </property>
+            <property name="text">
+             <string>&gt;|</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QToolButton" name="toolButton_ScrollToEnd">
+            <property name="toolTip">
+             <string>Scroll to End of Timeline</string>
+            </property>
+            <property name="statusTip">
+             <string>Scroll to End of Timeline</string>
+            </property>
+            <property name="text">
+             <string>&gt;||</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </widget>
        </item>
       </layout>
