--- a/GUI/MainWindow/MainWindow.ui
+++ b/GUI/MainWindow/MainWindow.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>847</width>
-    <height>800</height>
+    <width>1010</width>
+    <height>879</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -40,7 +40,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>847</width>
+     <width>1010</width>
      <height>21</height>
     </rect>
    </property>
@@ -75,6 +75,7 @@
     </property>
     <addaction name="actionZoom_Out"/>
     <addaction name="actionZoom_Default"/>
+    <addaction name="actionZoom_CurrentVideo"/>
     <addaction name="actionZoom_In"/>
     <addaction name="separator"/>
     <addaction name="actionJump_to_Start"/>
@@ -96,6 +97,34 @@
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <layout class="QGridLayout" name="gridLayout">
+       <item row="2" column="6">
+        <widget class="QLabel" name="lblActiveTotalTimelineDuration">
+         <property name="text">
+          <string>--</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="5">
+        <widget class="QLabel" name="label_4">
+         <property name="text">
+          <string>Viewport Offset:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="6">
+        <widget class="QLabel" name="lblActiveViewportOffsetAbsolute">
+         <property name="text">
+          <string>--</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="5">
+        <widget class="QLabel" name="label_3">
+         <property name="text">
+          <string>Total Timeline Duration:</string>
+         </property>
+        </widget>
+       </item>
        <item row="0" column="2">
         <widget class="QToolButton" name="toolButton_ZoomOut">
          <property name="toolTip">
@@ -103,41 +132,6 @@
          </property>
          <property name="text">
           <string>-</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="5">
-        <widget class="QLabel" name="lblActiveViewportDuration">
-         <property name="text">
-          <string>--</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="4">
-        <widget class="QLabel" name="label_2">
-         <property name="text">
-          <string>Viewport Duration:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="label">
-         <property name="text">
-          <string>Zoom:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="5">
-        <widget class="QLabel" name="lblActiveTotalTimelineDuration">
-         <property name="text">
-          <string>--</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="4">
-        <widget class="QLabel" name="label_3">
-         <property name="text">
-          <string>Total Timeline Duration:</string>
          </property>
         </widget>
        </item>
@@ -164,16 +158,30 @@
         </widget>
        </item>
        <item row="0" column="3">
-        <widget class="QToolButton" name="toolButton_ZoomIn">
-         <property name="toolTip">
-          <string>Zoom In</string>
-         </property>
+        <widget class="QToolButton" name="toolButton_CurrentVideo">
          <property name="text">
-          <string>+</string>
+          <string>Vid</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
+       <item row="0" column="6">
+        <widget class="QLabel" name="lblActiveViewportDuration">
+         <property name="text">
+          <string>--</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="5">
+        <widget class="QLabel" name="label_2">
+         <property name="text">
+          <string>Viewport Duration:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
         <widget class="QFrame" name="frame">
          <property name="frameShape">
           <enum>QFrame::StyledPanel</enum>
@@ -253,6 +261,23 @@
            </widget>
           </item>
          </layout>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Zoom:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="4">
+        <widget class="QToolButton" name="toolButton_ZoomIn">
+         <property name="toolTip">
+          <string>Zoom In</string>
+         </property>
+         <property name="text">
+          <string>+</string>
+         </property>
         </widget>
        </item>
       </layout>
@@ -354,6 +379,14 @@
   <action name="actionJump_to_End">
    <property name="text">
     <string>Jump to End</string>
+   </property>
+  </action>
+  <action name="actionZoom_CurrentVideo">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Current Video</string>
    </property>
   </action>
  </widget>
