--- a/GUI/UI/DialogComponents/StartEndDate_DialogComponents.ui
+++ b/GUI/UI/DialogComponents/StartEndDate_DialogComponents.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>224</width>
+    <width>406</width>
     <height>76</height>
    </rect>
   </property>
@@ -14,6 +14,9 @@
    <string>Frame</string>
   </property>
   <layout class="QFormLayout" name="formLayout">
+   <property name="fieldGrowthPolicy">
+    <enum>QFormLayout::ExpandingFieldsGrow</enum>
+   </property>
    <item row="0" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
