--- a/GUI/UI/DialogComponents/TitleSubtitleBody_DialogComponents.ui
+++ b/GUI/UI/DialogComponents/TitleSubtitleBody_DialogComponents.ui
@@ -14,6 +14,9 @@
    <string>Frame</string>
   </property>
   <layout class="QFormLayout" name="formLayout">
+   <property name="fieldGrowthPolicy">
+    <enum>QFormLayout::ExpandingFieldsGrow</enum>
+   </property>
    <item row="0" column="0">
     <widget class="QLabel" name="label_3">
      <property name="text">
@@ -23,6 +26,12 @@
    </item>
    <item row="0" column="1">
     <widget class="QLineEdit" name="lineEdit_Title">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <horstretch>1</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
       <string>title</string>
      </property>
