--- a/GUI/UI/TimelineHeaderWidget/TimelineHeaderWidget.ui
+++ b/GUI/UI/TimelineHeaderWidget/TimelineHeaderWidget.ui
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
+ <author>Pho Hale</author>
  <class>Frame_TimelineHeaderWidget</class>
  <widget class="QFrame" name="Frame_TimelineHeaderWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>284</width>
-    <height>256</height>
+    <width>126</width>
+    <height>124</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -28,14 +29,32 @@
    </property>
    <item>
     <widget class="QDockWidget" name="dockWidget_Main">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>124</width>
+       <height>120</height>
+      </size>
+     </property>
+     <property name="baseSize">
+      <size>
+       <width>50</width>
+       <height>50</height>
+      </size>
+     </property>
      <property name="features">
-      <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable|QDockWidget::DockWidgetVerticalTitleBar</set>
+      <set>QDockWidget::DockWidgetVerticalTitleBar</set>
      </property>
      <property name="allowedAreas">
       <set>Qt::LeftDockWidgetArea</set>
      </property>
      <property name="windowTitle">
-      <string>Track 0</string>
+      <string notr="true">Track 0</string>
      </property>
      <widget class="QWidget" name="dockWidgetContents">
       <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -53,17 +72,38 @@
        </property>
        <item>
         <layout class="QVBoxLayout" name="verticalLayout">
+         <property name="spacing">
+          <number>0</number>
+         </property>
          <item>
           <widget class="QLabel" name="lblTitle">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>50</width>
+             <height>16</height>
+            </size>
+           </property>
+           <property name="baseSize">
+            <size>
+             <width>50</width>
+             <height>16</height>
+            </size>
+           </property>
            <property name="text">
-            <string>TextLabel</string>
+            <string>Track 0</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QTextBrowser" name="textBrowser_Main">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
+            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
@@ -71,11 +111,11 @@
            <property name="acceptDrops">
             <bool>false</bool>
            </property>
-           <property name="autoFillBackground">
-            <bool>false</bool>
+           <property name="styleSheet">
+            <string notr="true">background-color: rgba(179, 215, 255, 35)</string>
            </property>
            <property name="frameShape">
-            <enum>QFrame::VLine</enum>
+            <enum>QFrame::NoFrame</enum>
            </property>
            <property name="frameShadow">
             <enum>QFrame::Plain</enum>
@@ -86,35 +126,70 @@
            <property name="textInteractionFlags">
             <set>Qt::NoTextInteraction</set>
            </property>
+           <property name="placeholderText">
+            <string>this is a multiline test</string>
+           </property>
            <property name="openLinks">
             <bool>false</bool>
            </property>
           </widget>
          </item>
          <item>
-          <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,1,0">
-           <item>
-            <widget class="QToolButton" name="toolButton_0">
-             <property name="text">
-              <string>...</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QToolButton" name="toolButton_2">
-             <property name="text">
-              <string>...</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QToolButton" name="toolButton_3">
-             <property name="text">
-              <string>...</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
+          <widget class="QFrame" name="frame_BottomButtons">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="frameShape">
+            <enum>QFrame::StyledPanel</enum>
+           </property>
+           <property name="frameShadow">
+            <enum>QFrame::Raised</enum>
+           </property>
+           <layout class="QVBoxLayout" name="verticalLayout_3">
+            <property name="sizeConstraint">
+             <enum>QLayout::SetFixedSize</enum>
+            </property>
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
+            <item>
+             <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0">
+              <item>
+               <widget class="QToolButton" name="toolButton_0"/>
+              </item>
+              <item>
+               <widget class="QToolButton" name="toolButton_2">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QToolButton" name="toolButton_3">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </item>
+           </layout>
+          </widget>
          </item>
         </layout>
        </item>
@@ -123,6 +198,48 @@
     </widget>
    </item>
   </layout>
+  <action name="actionToggle_Track_Header_Collapsed">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Toggle Track Header Collapsed</string>
+   </property>
+   <property name="toolTip">
+    <string>Toggles whether the track header is collapsed or revealed</string>
+   </property>
+  </action>
+  <action name="actionShow_Track_Options">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Show Track Options</string>
+   </property>
+   <property name="toolTip">
+    <string>Shows the configuration for the track</string>
+   </property>
+   <property name="autoRepeat">
+    <bool>true</bool>
+   </property>
+   <property name="visible">
+    <bool>true</bool>
+   </property>
+  </action>
+  <action name="actionRefresh_Track">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Refresh Track</string>
+   </property>
+   <property name="toolTip">
+    <string>Reloads the track</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
