--- a/GUI/UI/TimelineHeaderWidget/TimelineHeaderWidget.ui
+++ b/GUI/UI/TimelineHeaderWidget/TimelineHeaderWidget.ui
@@ -16,7 +16,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0">
    <property name="spacing">
-    <number>-1</number>
+    <number>6</number>
    </property>
    <property name="leftMargin">
     <number>0</number>
@@ -45,7 +45,7 @@
       </size>
      </property>
      <property name="features">
-      <set>QDockWidget::DockWidgetVerticalTitleBar</set>
+      <set>QDockWidget::DockWidgetClosable|QDockWidget::DockWidgetVerticalTitleBar</set>
      </property>
      <property name="allowedAreas">
       <set>Qt::LeftDockWidgetArea</set>
@@ -73,7 +73,7 @@
        <item>
         <layout class="QVBoxLayout" name="verticalLayout">
          <property name="spacing">
-          <number>-1</number>
+          <number>6</number>
          </property>
          <item>
           <widget class="QFrame" name="frame_TopButtons">
