--- a/GUI/UI/TimelineHeaderWidget/TimelineHeaderWidget.ui
+++ b/GUI/UI/TimelineHeaderWidget/TimelineHeaderWidget.ui
@@ -14,7 +14,20 @@
   <property name="windowTitle">
    <string>Frame</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout"/>
+  <layout class="QGridLayout" name="gridLayout">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
+  </layout>
   <action name="actionToggle_Track_Header_Collapsed">
    <property name="checkable">
     <bool>true</bool>
