--- a/GUI/UI/TimelineHeaderWidget/TimelineHeaderWidget_ContentsExpanded.ui
+++ b/GUI/UI/TimelineHeaderWidget/TimelineHeaderWidget_ContentsExpanded.ui
@@ -11,7 +11,15 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>TimelineHeaderWidget_ContentsExpanded</string>
+  </property>
+  <property name="autoFillBackground">
+   <bool>true</bool>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(30, 30, 30, 200), stop:1 rgba(60, 66, 60, 200));
+color:rgb(243, 243, 243);
+</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -43,10 +51,19 @@
       </property>
       <item>
        <widget class="QLabel" name="lblTitle">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="font">
          <font>
           <pointsize>11</pointsize>
          </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">color: rgb(250, 250, 250)</string>
         </property>
         <property name="text">
          <string>Track 00</string>
@@ -55,22 +72,49 @@
       </item>
       <item>
        <widget class="QPushButton" name="btnToggleCollapse">
-        <property name="text">
+        <property name="toolTip">
          <string>Collapse</string>
+        </property>
+        <property name="statusTip">
+         <string>Collapse</string>
+        </property>
+        <property name="accessibleName">
+         <string>Collapse</string>
+        </property>
+        <property name="text">
+         <string/>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="btnOptions">
-        <property name="text">
+        <property name="toolTip">
          <string>Options</string>
+        </property>
+        <property name="statusTip">
+         <string>Options</string>
+        </property>
+        <property name="accessibleName">
+         <string>Options</string>
+        </property>
+        <property name="text">
+         <string/>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="btnRefresh">
-        <property name="text">
+        <property name="toolTip">
          <string>Refresh</string>
+        </property>
+        <property name="statusTip">
+         <string>Refresh</string>
+        </property>
+        <property name="accessibleName">
+         <string>Refresh</string>
+        </property>
+        <property name="text">
+         <string/>
         </property>
        </widget>
       </item>
@@ -88,7 +132,7 @@
       <bool>false</bool>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgba(179, 215, 255, 35)</string>
+      <string notr="true">background-color: rgba(179, 215, 255, 80)</string>
      </property>
      <property name="documentTitle">
       <string>test</string>
