Renamed the ReferenceMarkViewer

--- a/GUI/UI/ReferenceMarkViewer/ReferenceMarkViewer.ui
+++ b/GUI/UI/ReferenceMarkViewer/ReferenceMarkViewer.ui
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DockWidget_ReferenceMarkViewer</class>
- <widget class="QDockWidget" name="DockWidget_ReferenceMarkViewer">
-  <property name="windowModality">
-   <enum>Qt::ApplicationModal</enum>
-  </property>
+ <class>ReferenceMarkViewer</class>
+ <widget class="QWidget" name="ReferenceMarkViewer">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -13,12 +10,59 @@
     <height>300</height>
    </rect>
   </property>
-  <property name="floating">
-   <bool>true</bool>
-  </property>
   <property name="windowTitle">
-   <string>Reference Mark Viewer</string>
+   <string>Form</string>
   </property>
+  <layout class="QVBoxLayout" name="verticalLayout_2">
+   <item>
+    <widget class="QFrame" name="frame">
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Active Reference Markers</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="toolButton">
+        <property name="text">
+         <string>...</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="toolButton_2">
+        <property name="text">
+         <string>...</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QFrame" name="frame_2">
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QTableWidget" name="tableWidget"/>
+      </item>
+     </layout>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections/>
