Working replacement of programmatic list

--- a/GUI/UI/ReferenceMarkViewer/ReferenceMarkViewer.ui
+++ b/GUI/UI/ReferenceMarkViewer/ReferenceMarkViewer.ui
@@ -57,7 +57,32 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
-       <widget class="QTableWidget" name="tableWidget"/>
+       <widget class="QTableWidget" name="tableWidget">
+        <property name="selectionBehavior">
+         <enum>QAbstractItemView::SelectRows</enum>
+        </property>
+        <property name="columnCount">
+         <number>6</number>
+        </property>
+        <column>
+         <property name="text">
+          <string>id</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>name</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>datetime</string>
+         </property>
+        </column>
+        <column/>
+        <column/>
+        <column/>
+       </widget>
       </item>
      </layout>
     </widget>
