--- a/GUI/MainWindow/MainWindow.ui
+++ b/GUI/MainWindow/MainWindow.ui
@@ -15,7 +15,13 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>600</width>
+    <width>1008</width>
+    <height>800</height>
+   </size>
+  </property>
+  <property name="baseSize">
+   <size>
+    <width>1008</width>
     <height>800</height>
    </size>
   </property>
@@ -41,7 +47,7 @@
      <x>0</x>
      <y>0</y>
      <width>1008</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
